{
    "name": "GameAction",
    "maps": [
        {
            "name": "GameActionMap",
            "id": "7dc09bcb-b2f5-40a3-9b4f-f5559d6c5183",
            "actions": [
                {
                    "name": "RestartGame",
                    "type": "Button",
                    "id": "fe0f29b9-667b-4e53-93c1-d7641f4b523b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "fc4594ed-71df-4e33-86c9-8469de973437",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovePaddle",
                    "type": "Value",
                    "id": "cf95767e-3226-4e92-9dad-dc703b499106",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Launch",
                    "type": "Button",
                    "id": "cfb67800-3a0b-41f8-a736-09a903174e95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8262bdae-a67c-40cd-adea-96d4683382d7",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdf1c4a4-1847-4feb-b93b-88b6c172ec7d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ArrowKeys",
                    "id": "a0b05450-b8e7-4b85-9814-1c9ac083fae6",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "263f6d73-397a-4ac1-a634-2f17d2903132",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4b0effab-8238-4d52-827b-be0059a6b326",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "14c63aa0-0151-4864-98be-19b9ac4f6e22",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c7cf1ed7-abd8-444c-95d2-2f29d7cbb535",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e2d4400-487f-40be-864b-98eb74bafca7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePaddle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ae9759a6-8e89-470f-aac5-a282bc42bef4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Launch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}